Audio: Fix download indicator z-index order (#1185)

--- a/src/components/common/Audio.scss
+++ b/src/components/common/Audio.scss
@@ -86,6 +86,7 @@
     left: 1.5rem;
     top: 1.5rem;
     border: .125rem solid var(--background-color);
+    z-index: 1;
 
     i {
       font-size: 0.8125rem;
